--- a/imageSearch.html
+++ b/imageSearch.html
@@ -4,10 +4,18 @@
         <title>Search</title>
         <link rel="stylesheet" href="styles.css"/>
     </head>
-    <body>
-        <form action="https://www.google.com/search">
-            <input type="text" name="q">
-            <input type="submit" value="Google Search">
+<body>
+        <div class="links-container">
+            <div class="link"><a href="index.html">Search</a></div>
+            <div class="link"><a href="advancedSearch.html">Advanced Search</a></div>
+        </div>
+
+        <div class="search">
+            <form action="https://www.google.com/search">
+                <input type="text" name="q">
+                <input type="submit" value="Google Search">
         </form>
+
+        </div>
     </body>
 </html>
