--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
             <div class="link"><a href="advancedSearch.html">Advanced Search</a></div>
         </div>
 
-        <div>
-            <form action="https://www.google.com/search">
-                <input type="text" name="q">
-                <input type="submit" value="Google Search">
-        </form>
-
+        <div class="search-container">
+            <div class="search">
+                <form action="https://www.google.com/search">
+                    <input type="text" name="q">
+                    <input type="submit" value="Google Search">
+            </form>
+            </div>
         </div>
     </body>
 </html>
