image search done, some search design fixes

--- a/imageSearch.html
+++ b/imageSearch.html
@@ -10,12 +10,15 @@
             <div class="link"><a href="advancedSearch.html">Advanced Search</a></div>
         </div>
 
-        <div class="search">
-            <form action="https://www.google.com/search">
-                <input type="text" name="q">
-                <input type="submit" value="Google Search">
-        </form>
-
+        <div class="search-container">
+            <div class="search">
+                <form action="https://www.google.sk/search">
+                    <input type="text" name="q">
+                    <input name="tbm" type="hidden" value="isch">
+                    <input type="submit" value="Image Search">
+                </form>
+            </div>
         </div>
+
     </body>
 </html>
