--- a/advancedSearch.html
+++ b/advancedSearch.html
@@ -11,11 +11,29 @@
         </div>
 
         <div>
-            <form action="https://www.google.com/search">
-                <input type="text" name="q">
-                <input type="submit" value="Google Search">
-        </form>
-
+            <div>
+                <h2>Find pages with...</h2>
+                <p>all these words:</p>
+                <p>this exact word or phrase:</p>
+                <p>any of these words:</p>
+                <p>none of these words:</p>
+            </div>
+            <div>
+                <form action="https://www.google.com/search">
+                    <input type="text" name="q">
+                    <input type="text" name="q">
+                    <input type="text" name="q">
+                    <input type="text" name="q">
+                    <input type="submit" value="Google Search">
+                </form>
+            </div>
+            <div>
+                <h2>To do this in the search box.</h2>
+                <p>Type the important words: <code>tri-colour rat terrier</code></p>
+                <p>Put exact words in quotes: <code>"rat terrier"</code></p>
+                <p>Type OR between all the words you want: <code>miniature OR standard</code></p>
+                <p>Put a minus sign just before words that you don't want:<code> -rodent, -"Jack Russell"</code></p>
+            </div>
         </div>
     </body>
 </html>
